[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/images/intro_scene/banana tree - 15.png" type="Texture" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://entities/post-credits/post-credits.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 960, 0, 320, 180 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 1 ), SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "default",
"speed": 1.0
} ]

[node name="post-credits" type="Node2D"]
script = ExtResource( 3 )

[node name="ScaledCont" type="Node2D" parent="."]
scale = Vector2( 3.2, 3.4 )

[node name="BG" type="AnimatedSprite" parent="ScaledCont"]
position = Vector2( 160, 90 )
frames = SubResource( 5 )

[node name="WeMadeIt" type="Label" parent="."]
margin_left = 46.0
margin_top = 386.0
margin_right = 142.0
margin_bottom = 403.0
theme = ExtResource( 2 )
text = "We made it!!!!"
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToBeCont" type="Label" parent="."]
margin_left = 47.0
margin_top = 409.0
margin_right = 204.0
margin_bottom = 426.0
theme = ExtResource( 2 )
text = "To Be Continued . . . ."
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="."]
visible = false
margin_left = 44.0
margin_top = 445.0
margin_right = 254.0
margin_bottom = 468.0
theme = ExtResource( 2 )
disabled = true
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="ScaledCont/BG" to="." method="_on_BG_animation_finished"]
[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
